# Offense

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  COPYING  INSTALL  Makefile.am  README.md  configure.ac
build-aux/m4/: bitcoin_qt.m4  gmp.m4
build-aux/snap/: snapcraft.yaml
contrib/: gitian-build.py  install_db4.sh  offense_coin-cli.bash-completion  offense_coin-qt.pro  offense_coin-tx.bash-completion  offense_coind.bash-completion  valgrind.supp
contrib/bitrpc/: bitrpc.py
contrib/debian/: README.md  changelog  control  offense_coin-qt.desktop  offense_coin-qt.install  offense_coin-qt.lintian-overrides  offense_coin-qt.manpages  offense_coin-qt.protocol  offense_coind.bash-completion  offense_coind.examples  offense_coind.install  offense_coind.lintian-overrides  offense_coind.manpages  offense_coind.postinst  offense_coind.postrm  offense_coind.service  rules  watch
contrib/devtools/: README.md  copyright_header.py  gen-manpages.sh  test_deterministic_coverage.sh  update-translations.py
contrib/gitian-descriptors/: gitian-linux.yml  gitian-osx-signer.yml  gitian-osx.yml  gitian-win-signer.yml  gitian-win.yml
contrib/gitian-keys/: README.md
contrib/init/: README.md  offense_coind.conf  offense_coind.init  offense_coind.openrc  offense_coind.openrcconf  offense_coind.service  org.offense_coin.offense_coind.plist
contrib/linearize/: linearize-hashes.py
contrib/macdeploy/: README.md  custom_dsstore.py  detached-sig-create.sh  macdeployqtplus
contrib/qos/: README.md  tc.sh
contrib/rpm/: offense_coin.fc  offense_coin.if  (+2 more)
depends/: Makefile  README.md
doc/: Doxyfile.in  README.md  README_windows.txt  REST-interface.md  build-osx.md  build-unix.md  build-windows.md  dependencies.md  developer-notes.md  dnsseed-policy.md  files.md  fuzzing.md  gitian-building.md  init.md  reduce-memory.md  release-notes.md  release-process.md  tor.md  translation_process.md  translation_strings_policy.md  zmq.md
params/: install-params.sh
share/: setup.nsi.in  ui.rc
src/: Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qt_locale.include  Makefile.qttest.include  Makefile.test.include  activemasternode.cpp  activemasternode.h  addrdb.cpp  addrdb.h  addressbook.cpp  addressbook.h  addrman.cpp  addrman.h  amount.h  base58.cpp  base58.h  bip38.cpp  blockassembler.cpp  blockassembler.h  blocksignature.cpp  blocksignature.h  bloom.cpp  bloom.h  chain.cpp  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsbase.h  chainparamsseeds.h  checkpoints.cpp  checkpoints.h  clientversion.cpp  clientversion.h  coincontrol.h  coins.cpp  coins.h  compat.h  compressor.cpp  (+118 more)
src/qt/: CMakeLists.txt  addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  bantablemodel.cpp  bantablemodel.h  bitcoinaddressvalidator.cpp  bitcoinunits.cpp  bitcoinunits.h  clientmodel.cpp  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.cpp  csvmodelwriter.cpp  csvmodelwriter.h  editaddressdialog.cpp  editaddressdialog.h  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  intro.h  macnotificationhandler.h  macnotificationhandler.mm  networkstyle.cpp  notificator.cpp  notificator.h  offense_coin.cpp  offense_coin.qrc  offense_coin_locale.qrc  offense_coinstrings.cpp  openuridialog.cpp  openuridialog.h  optionsmodel.cpp  optionsmodel.h  paymentserver.cpp  (+27 more)
src/qt/forms/: addressbookpage.ui  coincontroldialog.ui  intro.ui  openuridialog.ui  rpcconsole.ui
src/qt/locale/: offense_coin_de.ts  offense_coin_en.ts  offense_coin_en_US.ts  offense_coin_es.ts  offense_coin_fr_FR.ts  offense_coin_hr_HR.ts  offense_coin_ko_KR.ts  offense_coin_nl.ts  offense_coin_pl.ts
src/qt/offense_coin/: addnewaddressdialog.cpp  addnewaddressdialog.h  addnewcontactdialog.cpp  addnewcontactdialog.h  addresseswidget.cpp  addresseswidget.h  addressfilterproxymodel.cpp  addressfilterproxymodel.h  addressholder.cpp  addressholder.h  addresslabelrow.cpp  addresslabelrow.h  balancebubble.cpp  balancebubble.h  coldstakingmodel.cpp  coldstakingmodel.h  coldstakingwidget.cpp  coldstakingwidget.h  contactdropdownrow.cpp  contactdropdownrow.h  contactsdropdown.cpp  contactsdropdown.h  createproposaldialog.cpp  createproposaldialog.h  csrow.cpp  csrow.h  dashboardwidget.cpp  dashboardwidget.h  defaultdialog.cpp  defaultdialog.h  expandablebutton.cpp  expandablebutton.h  focuseddialog.cpp  focuseddialog.h  furabstractlistitemdelegate.cpp  furabstractlistitemdelegate.h  furlistrow.h  governancemodel.cpp  governancemodel.h  governancewidget.cpp  (+71 more)
src/qt/offense_coin/forms/: addresseswidget.ui  coldstakingwidget.ui  createproposaldialog.ui  dashboardwidget.ui  governancewidget.ui  masternodeswidget.ui  receivewidget.ui  requestdialog.ui  send.ui  sendchangeaddressdialog.ui  sendmultirow.ui  topbar.ui  votedialog.ui  welcomecontentwidget.ui
src/qt/offense_coin/res/css/: style_dark.css  style_light.css
src/qt/offense_coin/settings/: settingsbackupwallet.cpp  settingsbackupwallet.h  settingsbittoolwidget.cpp  settingsbittoolwidget.h  settingsconsolewidget.cpp  settingsconsolewidget.h  settingsdisplayoptionswidget.cpp  settingsdisplayoptionswidget.h  settingsexportcsv.cpp  settingsexportcsv.h  settingsfaqwidget.cpp  settingsfaqwidget.h  settingsinformationwidget.cpp  settingsinformationwidget.h  settingsmainoptionswidget.cpp  settingsmainoptionswidget.h  settingsnetworkwidget.cpp  settingsnetworkwidget.h  settingssignmessagewidgets.cpp  settingssignmessagewidgets.h  settingswalletoptionswidget.cpp  settingswalletoptionswidget.h  settingswalletrepairwidget.cpp  settingswalletrepairwidget.h  settingswidget.cpp  settingswidget.h
src/qt/offense_coin/settings/forms/: settingsbittoolwidget.ui  settingsdisplayoptionswidget.ui  settingsfaqwidget.ui  settingssignmessagewidgets.ui  settingswalletoptionswidget.ui  settingswidget.ui
src/qt/res/: offense_coin-qt-res.rc
src/qt/res/css/: default.css
src/qt/res/icons/: bitcoin.icns
src/qt/test/: test_main.cpp  uritests.cpp
test/: README.md
util/: fetch-params.sh
(+399 files in other folders)
